--- a/.ci/azure/unix.yml
+++ b/.ci/azure/unix.yml
@@ -21,6 +21,13 @@ steps:
 - script: .ci/azure/scripts/install-wrf.sh
   displayName: Install WRF
 
+# In Azure Pipeline builds, the repository folder is not named after the repository name.
+# When building WPS in the Make variant, WPS looks for hard-coded folder names of WRF.
+# To make WPS happy but also to avoid having to pass a different folder to the CMake config,
+# we symlink the repository to the "WRF" folder.
+- script: ln -sf `pwd` ../WRF
+  displayName: Symlink repository as "WRF" for convenience
+
 - script: |
     set -e
     cd ..
