--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -31,6 +31,12 @@ steps:
 - script: call .ci\appveyor\install-wrf.bat
   displayName: Install WRF
 
+# In Azure Pipeline builds, the repository folder is not named after the repository name.
+# To avoid having to pass a different folder to the CMake config in install-wps.bat,
+# we symlink the repository to the "WRF" folder.
+- script: mklink /J ..\WRF .
+  displayName: Symlink repository as "WRF" for convenience
+
 - script: |
     pushd ..
     git clone --depth=100 --no-single-branch https://github.com/%WPS_REPO%.git WPS
