--- a/.ci/azure/unix.yml
+++ b/.ci/azure/unix.yml
@@ -48,7 +48,7 @@ steps:
 
 - script: |
     if [[ $MODE == dm* ]]; then export MPI_FLAG=--mpi ; fi
-    python wats/wats/main.py run --mode $WATS_MODE --wrf-dir ../WRF --wps-dir . --work-dir wats_work $MPI_FLAG
+    python wats/wats/main.py run --mode $WATS_MODE --wrf-dir . --wps-dir ../WPS --work-dir wats_work $MPI_FLAG
   displayName: Run WATS
 
 #- task: PublishPipelineArtifact@0
