--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -50,7 +50,7 @@ steps:
     versionSpec: '3.x'
 
 - script: |
-    git clone --depth=1 --branch=%WATS_BRANCH% https://github.com/$WATS_REPO.git wats
+    git clone --depth=1 --branch=%WATS_BRANCH% https://github.com/%WATS_REPO%.git wats
     pip install -r wats/requirements.txt
   displayName: Install WATS
 
