--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -55,8 +55,9 @@ steps:
   displayName: Install WATS
 
 - pwsh: |
-    if ($Env:MODE.StartsWith("dm")) { $Env:MPI_FLAG="--mpi" }
-    python wats/wats/main.py run --mode $Env:WATS_MODE --wrf-dir . --wps-dir ../WPS --work-dir wats_work $Env:MPI_FLAG
+    if ($Env:MODE.StartsWith("dm")) { $mpi_flag="--mpi" }
+    if ($Env:BUILD_SYSTEM -eq "cmake") { $dir_suffix="build/install" }
+    python wats/wats/main.py run --mode $Env:WATS_MODE --wrf-dir ./$dir_suffix --wps-dir ../WPS/$dir_suffix --work-dir wats_work $mpi_flag
   displayName: Run WATS
 
 #- task: PublishPipelineArtifact@0
