--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -42,6 +42,7 @@ steps:
     git clone --depth=100 --no-single-branch https://github.com/%WPS_REPO%.git WPS
     cd WPS
     git checkout %WPS_COMMIT%
+    git log --oneline -n 1
     call .ci\appveyor\install-wps.bat
   displayName: Install WPS
 
