--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,68 +9,50 @@ variables:
   WATS_MODE: wrf
 
 jobs:
-- job: windows_cmake_serial
-  pool:
-    vmImage: vs2017-win2016
-  variables:
-    OS_NAME: windows
-    BUILD_SYSTEM: cmake
+- template: .ci/azure/windows.yml
+  parameters:
+    OS_NAME: Windows
+    BUILD_SYSTEM: CMake
     BUILD_TYPE: Debug
     MODE: serial
     GRIB1: 0
     GRIB2: 1
     NESTING: basic
-  steps:
-  - template: .ci/azure/windows.yml
 
-- job: windows_cmake_dmpar
-  pool:
-    vmImage: vs2017-win2016
-  variables:
-    OS_NAME: windows
-    BUILD_SYSTEM: cmake
+- template: .ci/azure/windows.yml
+  parameters:
+    OS_NAME: Windows
+    BUILD_SYSTEM: CMake
     BUILD_TYPE: Debug
     MODE: dmpar
     GRIB1: 0
     GRIB2: 1
     NESTING: basic
-  steps:
-  - template: .ci/azure/windows.yml
 
 # TODO CC/FC are not used for Make builds
 
-- job: ubuntu_make_serial
-  pool:
-    vmImage: ubuntu-16.04
-  variables:
-    OS_NAME: linux
-    BUILD_SYSTEM: make
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: Linux
+    BUILD_SYSTEM: Make
     BUILD_TYPE: Debug
     CC: gcc
     FC: gfortran
     MODE: serial
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: ubuntu_make_dmpar
-  pool:
-    vmImage: ubuntu-16.04
-  variables:
-    OS_NAME: linux
-    BUILD_SYSTEM: make
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: Linux
+    BUILD_SYSTEM: Make
     BUILD_TYPE: Debug
     CC: gcc
     FC: gfortran
     MODE: dmpar
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: ubuntu_cmake_serial
-  pool:
-    vmImage: ubuntu-16.04
-  variables:
-    OS_NAME: linux
-    BUILD_SYSTEM: cmake
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: Linux
+    BUILD_SYSTEM: CMake
     BUILD_TYPE: Debug
     CC: gcc
     FC: gfortran
@@ -78,15 +60,11 @@ jobs:
     GRIB1: 0
     GRIB2: 1
     NESTING: basic
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: ubuntu_cmake_dmpar
-  pool:
-    vmImage: ubuntu-16.04
-  variables:
-    OS_NAME: linux
-    BUILD_SYSTEM: cmake
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: Linux
+    BUILD_SYSTEM: CMake
     BUILD_TYPE: Debug
     CC: gcc
     FC: gfortran
@@ -94,41 +72,29 @@ jobs:
     GRIB1: 0
     GRIB2: 1
     NESTING: basic
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: macos_make_serial
-  pool:
-    vmImage: macos-10.13
-  variables:
-    OS_NAME: osx
-    BUILD_SYSTEM: make
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: macOS
+    BUILD_SYSTEM: Make
     BUILD_TYPE: Debug
     CC: gcc-8
     FC: gfortran-8
     MODE: serial
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: macos_make_dmpar
-  pool:
-    vmImage: macos-10.13
-  variables:
-    OS_NAME: osx
-    BUILD_SYSTEM: make
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: macOS
+    BUILD_SYSTEM: Make
     BUILD_TYPE: Debug
     CC: gcc-8
     FC: gfortran-8
     MODE: dmpar
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: macos_cmake_serial
-  pool:
-    vmImage: macos-10.13
-  variables:
-    OS_NAME: osx
-    BUILD_SYSTEM: cmake
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: macOS
+    BUILD_SYSTEM: CMake
     BUILD_TYPE: Debug
     CC: gcc-8
     FC: gfortran-8
@@ -136,15 +102,11 @@ jobs:
     GRIB1: 0
     GRIB2: 1
     NESTING: basic
-  steps:
-  - template: .ci/azure/unix.yml
 
-- job: macos_cmake_dmpar
-  pool:
-    vmImage: macos-10.13
-  variables:
-    OS_NAME: osx
-    BUILD_SYSTEM: cmake
+- template: .ci/azure/unix.yml
+  parameters:
+    OS_NAME: macOS
+    BUILD_SYSTEM: CMake
     BUILD_TYPE: Debug
     CC: gcc-8
     FC: gfortran-8
@@ -152,5 +114,3 @@ jobs:
     GRIB1: 0
     GRIB2: 1
     NESTING: basic
-  steps:
-  - template: .ci/azure/unix.yml
