--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -1,70 +1,81 @@
-steps:
-- pwsh: |
-    Get-CimInstance Win32_Processor | Select-Object -Property [a-z]*
-    Get-CimInstance Win32_OperatingSystem | Select-Object -Property [a-z]*
-    Get-CimInstance Win32_LogicalDisk
-  displayName: Dump VM specs
+jobs:
+- job: ${{ parameters.OS_NAME }}_${{ parameters.BUILD_SYSTEM }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
+  displayName: ${{ parameters.OS_NAME }} ${{ parameters.BUILD_SYSTEM }} [${{ parameters.BUILD_TYPE }}, ${{ parameters.MODE }}]
 
-- script: set
-  displayName: Dump environment variables
+  pool:
+      vmImage: vs2017-win2016
 
-# We will install the latest version later on.
-- pwsh: |
-    $products = Get-CimInstance -ClassName Win32_Product -Filter "Name like 'Microsoft MPI%'"
-    foreach ($p in $products) {
-      echo "Uninstalling $($p.Name)"
-      Invoke-CimMethod -InputObject $p -MethodName Uninstall
-    }
-  condition: and(succeeded(), startsWith(variables.MODE, 'dm'))
-  displayName: Remove existing MSMPI
+  variables:
+    ${{ each pair in parameters }}:
+      ${{ pair.key }}: ${{ pair.value }}
 
-- script: |
-    choco install msys2 --params "/InstallDir:c:\msys64"
-  displayName: Install MSYS2
+  steps:
+  - pwsh: |
+      Get-CimInstance Win32_Processor | Select-Object -Property [a-z]*
+      Get-CimInstance Win32_OperatingSystem | Select-Object -Property [a-z]*
+      Get-CimInstance Win32_LogicalDisk
+    displayName: Dump VM specs
 
-- task: BatchScript@1
-  displayName: Setup dependencies
-  inputs:
-    filename: .ci\appveyor\setup-dependencies.bat
-    modifyEnvironment: true
+  - script: set
+    displayName: Dump environment variables
 
-- script: call .ci\appveyor\install-wrf.bat
-  displayName: Install WRF
+  # We will install the latest version later on.
+  - pwsh: |
+      $products = Get-CimInstance -ClassName Win32_Product -Filter "Name like 'Microsoft MPI%'"
+      foreach ($p in $products) {
+        echo "Uninstalling $($p.Name)"
+        Invoke-CimMethod -InputObject $p -MethodName Uninstall
+      }
+    condition: and(succeeded(), startsWith(variables.MODE, 'dm'))
+    displayName: Remove existing MSMPI
 
-# In Azure Pipeline builds, the repository folder is not named after the repository name.
-# To avoid having to pass a different folder to the CMake config in install-wps.bat,
-# we symlink the repository to the "WRF" folder.
-- script: mklink /J ..\WRF .
-  displayName: Symlink repository as "WRF" for convenience
+  - script: |
+      choco install msys2 --params "/InstallDir:c:\msys64"
+    displayName: Install MSYS2
 
-- script: |
-    pushd ..
-    git clone --depth=100 --no-single-branch https://github.com/%WPS_REPO%.git WPS
-    cd WPS
-    git checkout %WPS_COMMIT%
-    git log --oneline -n 1
-  displayName: Download WPS
+  - task: BatchScript@1
+    displayName: Setup dependencies
+    inputs:
+      filename: .ci\appveyor\setup-dependencies.bat
+      modifyEnvironment: true
 
-- script: call ..\WPS\.ci\appveyor\install-wps.bat
-  displayName: Install WPS
+  - script: call .ci\appveyor\install-wrf.bat
+    displayName: Install WRF
 
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.x'
+  # In Azure Pipeline builds, the repository folder is not named after the repository name.
+  # To avoid having to pass a different folder to the CMake config in install-wps.bat,
+  # we symlink the repository to the "WRF" folder.
+  - script: mklink /J ..\WRF .
+    displayName: Symlink repository as "WRF" for convenience
 
-- script: |
-    git clone --depth=1 --branch=%WATS_BRANCH% https://github.com/%WATS_REPO%.git wats
-    pip install -r wats/requirements.txt
-  displayName: Install WATS
+  - script: |
+      pushd ..
+      git clone --depth=100 --no-single-branch https://github.com/%WPS_REPO%.git WPS
+      cd WPS
+      git checkout %WPS_COMMIT%
+      git log --oneline -n 1
+    displayName: Download WPS
 
-- pwsh: |
-    if ($Env:MODE.StartsWith("dm")) { $mpi_flag="--mpi" }
-    if ($Env:BUILD_SYSTEM -eq "cmake") { $dir_suffix="build/install" }
-    python wats/wats/main.py run --mode $Env:WATS_MODE --wrf-dir ./$dir_suffix --wps-dir ../WPS/$dir_suffix --work-dir wats_work $mpi_flag
-  displayName: Run WATS
+  - script: call ..\WPS\.ci\appveyor\install-wps.bat
+    displayName: Install WPS
 
-#- task: PublishPipelineArtifact@0
-#  displayName: Publish binaries
-#  inputs:
-#    artifactName: binaries_$(OS_NAME)_$(BUILD_SYSTEM)_$(BUILD_TYPE)_$(MODE)
-#    targetPath: build/install/main
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x'
+
+  - script: |
+      git clone --depth=1 --branch=%WATS_BRANCH% https://github.com/%WATS_REPO%.git wats
+      pip install -r wats/requirements.txt
+    displayName: Install WATS
+
+  - pwsh: |
+      if ($Env:MODE.StartsWith("dm")) { $mpi_flag="--mpi" }
+      if ($Env:BUILD_SYSTEM -eq "CMake") { $dir_suffix="build/install" }
+      python wats/wats/main.py run --mode $Env:WATS_MODE --wrf-dir ./$dir_suffix --wps-dir ../WPS/$dir_suffix --work-dir wats_work $mpi_flag
+    displayName: Run WATS
+
+  #- task: PublishPipelineArtifact@0
+  #  displayName: Publish binaries
+  #  inputs:
+  #    artifactName: binaries_$(OS_NAME)_$(BUILD_SYSTEM)_$(BUILD_TYPE)_$(MODE)
+  #    targetPath: build/install/main
