--- a/.ci/azure/unix.yml
+++ b/.ci/azure/unix.yml
@@ -55,24 +55,4 @@ jobs:
   - script: ../WPS/.ci/azure/scripts/install-wps.sh
     displayName: Install WPS
 
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.x'
-
-  - script: |
-      git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
-      pip install -r wats/requirements.txt
-    displayName: Install WATS
-
-  - script: |
-      if [[ $MODE == dm* ]]; then export MPI_FLAG=--mpi ; fi
-      if [[ $BUILD_SYSTEM == CMake ]]; then dir_suffix=build/install ; fi
-      python wats/wats/main.py run --mode $WATS_MODE --wrf-dir ./$dir_suffix --wps-dir ../WPS/$dir_suffix --work-dir wats_work $MPI_FLAG
-    displayName: Run WATS
-
-  #- task: PublishPipelineArtifact@0
-  #  displayName: Publish binaries
-  #  condition: and(succeeded(), eq(variables.BUILD_SYSTEM, 'CMake'))
-  #  inputs:
-  #    artifactName: binaries_$(OS_NAME)_$(BUILD_SYSTEM)_$(BUILD_TYPE)_$(MODE)
-  #    targetPath: build/install/main
+  - template: wats_run.yml
