--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -49,7 +49,7 @@ jobs:
     displayName: Symlink repository as "WRF" for convenience
 
   - script: |
-      pushd ..
+      cd ..
       git clone --depth=100 --no-single-branch https://github.com/%WPS_REPO%.git WPS
       cd WPS
       git checkout %WPS_COMMIT%
@@ -59,23 +59,4 @@ jobs:
   - script: call ..\WPS\.ci\appveyor\install-wps.bat
     displayName: Install WPS
 
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.x'
-
-  - script: |
-      git clone --depth=1 --branch=%WATS_BRANCH% https://github.com/%WATS_REPO%.git wats
-      pip install -r wats/requirements.txt
-    displayName: Install WATS
-
-  - pwsh: |
-      if ($Env:MODE.StartsWith("dm")) { $mpi_flag="--mpi" }
-      if ($Env:BUILD_SYSTEM -eq "CMake") { $dir_suffix="build/install" }
-      python wats/wats/main.py run --mode $Env:WATS_MODE --wrf-dir ./$dir_suffix --wps-dir ../WPS/$dir_suffix --work-dir wats_work $mpi_flag
-    displayName: Run WATS
-
-  #- task: PublishPipelineArtifact@0
-  #  displayName: Publish binaries
-  #  inputs:
-  #    artifactName: binaries_$(OS_NAME)_$(BUILD_SYSTEM)_$(BUILD_TYPE)_$(MODE)
-  #    targetPath: build/install/main
+  - template: wats_run.yml
