lift job time limit

--- a/.ci/azure/unix.yml
+++ b/.ci/azure/unix.yml
@@ -1,6 +1,8 @@
 jobs:
 - job: ${{ parameters.OS_NAME }}_${{ parameters.BUILD_SYSTEM }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
-  displayName: ${{ parameters.OS_NAME }} ${{ parameters.BUILD_SYSTEM }} [${{ parameters.BUILD_TYPE }}, ${{ parameters.MODE }}]
+  displayName: '${{ parameters.OS_NAME }} ${{ parameters.BUILD_SYSTEM }}: ${{ parameters.BUILD_TYPE }}, ${{ parameters.MODE }}'
+
+  timeoutInMinutes: 0
 
   pool:
     ${{ if eq(parameters.OS_NAME, 'Linux') }}:
