--- a/.travis.yml
+++ b/.travis.yml
@@ -9,27 +9,22 @@ env:
     - WPS_REPO=WRF-CMake/WPS
     - WRF_COMMIT=$TRAVIS_COMMIT
     - WPS_COMMIT=wps-cmake
-    - WATS_REPO=WRF-CMake/wats
-    - WATS_BRANCH=master
-    - WATS_DATA_REPO=WRF-CMake/wats-data
-    - WATS_MODE=wrf
 
 jobs:
   include:
-    # Make reference build (WATS)
+    # Make builds
+    
     - stage: build
       os: linux
       dist: trusty
       sudo: required
       env:
         - SYSTEM=make
-        # use Debug for faster compilation to be able to run more cases
         - BUILD_TYPE=Debug
         - CC=gcc
         - FC=gfortran
         - MODE=serial
 
-    # Make reference build (WATS)
     - stage: build
       os: linux
       dist: trusty
@@ -41,7 +36,6 @@ jobs:
         - FC=gfortran
         - MODE=dmpar
     
-    # Make reference build (WATS)
     - stage: build
       os: osx
       osx_image: xcode9.2 # https://github.com/travis-ci/travis-ci/issues/9640
@@ -53,7 +47,6 @@ jobs:
         - FC=gfortran-8
         - MODE=serial
 
-    # Make reference build (WATS)
     - stage: build
       os: osx
       osx_image: xcode9.2 # https://github.com/travis-ci/travis-ci/issues/9640
@@ -64,6 +57,8 @@ jobs:
         - CC=gcc-8 # GNU via Homebrew
         - FC=gfortran-8
         - MODE=dmpar
+
+    # CMake builds
 
     - stage: build
       os: linux
@@ -121,18 +116,6 @@ jobs:
         - MODE=dmpar
         - NESTING=basic
 
-    - stage: wats
-      # Currently, WATS is only supported for branch builds since
-      # pull requests (from forks) cannot access the necessary secrets.
-      if: type != pull_request
-      os: linux
-      before_install: skip
-      install:
-        - git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
-      script:
-        - wats/.ci/travis/trigger-wats-travis.sh
-        - wats/.ci/travis/trigger-wats-appveyor.sh
-
 before_install:
   - .ci/travis/setup-dependencies.sh
 
@@ -140,29 +123,3 @@ install:
   - .ci/travis/install-wrf.sh
 
 script: skip
-
-before_deploy:
-  - .ci/travis/install-python3.sh
-  - cd ..
-  - git clone --depth=100 --no-single-branch https://github.com/$WPS_REPO.git WPS
-  - git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
-  - cd WPS
-  - git checkout $WPS_COMMIT
-  - .ci/travis/install-wps.sh
-  - cd ..
-  - pip3 install -r wats/requirements.txt
-  - if [[ $MODE == dm* ]]; then export MPI_FLAG=--mpi ; fi
-  - python3 wats/wats/main.py run --mode $WATS_MODE --wrf-dir WRF --wps-dir WPS --work-dir wats_work $MPI_FLAG
-  - pip3 install -r wats/.ci/travis/requirements.txt
-  - python3 wats/.ci/travis/cleanup-wats-data.py
-
-deploy:
-  provider: pages
-  github-token: $GITHUB_TOKEN
-  skip-cleanup: true
-  local-dir: ../wats_work/output
-  repo: $WATS_DATA_REPO
-  target-branch: $TRAVIS_REPO_SLUG-$TRAVIS_BUILD_NUMBER-$TRAVIS_OS_NAME-$MODE
-  on:
-    all_branches: true
-    condition: $SYSTEM = make
