--- a/.ci/azure/matrix.yml
+++ b/.ci/azure/matrix.yml
@@ -1,11 +1,26 @@
 parameters:
+  TEMPLATES:
+    Linux: unix.yml
+    macOS: unix.yml
+    Windows: windows.yml
+  Linux:
+    CC: gcc
+    FC: gfortran
+  macOS:
+    CC: gcc-8
+    FC: gfortran-8
+  Windows:
+    CC: gcc
+    FC: gfortran
+  universal:
+    NESTING: basic
+    GRIB1: 0
+    GRIB2: 1
+  # loop/matrix parameters
   OS_NAMES: [Linux, macOS, Windows]
   BUILD_SYSTEMS: [Make, CMake]
   BUILD_TYPES: [Debug, Release]
   MODES: [serial, dmpar]
-  NESTING: basic
-  GRIB1: 0
-  GRIB2: 1
 
 jobs:
 # TODO CC/FC are not used for Make builds
@@ -14,22 +29,17 @@ jobs:
   - ${{ each BUILD_TYPE in parameters.BUILD_TYPES }}:
     - ${{ each MODE in parameters.MODES }}:
       - ${{ each BUILD_SYSTEM in parameters.BUILD_SYSTEMS }}:
-        - ${{ if eq(parameters.OS_NAME, 'Windows') }}:
-            template: windows.yml
-          ${{ if ne(parameters.OS_NAME, 'Windows') }}:
-            template: unix.yml
+        - template: ${{ parameters.TEMPLATES[parameters.OS_NAME] }}
           parameters:
             OS_NAME: ${{ OS_NAME }}
             BUILD_SYSTEM: ${{ BUILD_SYSTEM }}
             BUILD_TYPE: ${{ BUILD_TYPE }}
-            CC: gcc
-            FC: gfortran
             MODE: ${{ MODE }}
-            NESTING: ${{ parameters.NESTING }}
-            GRIB1: ${{ parameters.GRIB1 }}
-            GRIB2: ${{ parameters.GRIB2 }}
+            ${{ insert }}: ${{ parameters[parameters.OS_NAME] }}
+            ${{ insert }}: ${{ parameters.universal }}
       - template: wats_diff.yml
         parameters:
+          # For Windows, since there is no Make-based reference, compare against Linux.
           ${{ if eq(parameters.OS_NAME, 'Windows') }}:
             OS_NAME_MAKE: Linux
           ${{ if ne(parameters.OS_NAME, 'Windows') }}:
