--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,12 +7,16 @@ clone_depth: 50
 environment:
   matrix:
     - BUILD_TYPE: Debug
+      CC: gcc
+      FC: gfortran
       MODE: serial
       NESTING: basic
       GRIB1: 0
       GRIB2: 1
       
     - BUILD_TYPE: Debug
+      CC: gcc
+      FC: gfortran
       MODE: dmpar
       NESTING: basic
       GRIB1: 0
