cmake: only forbid clang if used as fortran compiler, C is fine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ if (NOT MINGW AND NOT UNIX)
     message(FATAL_ERROR "Unsupported operating system / toolset")
 endif()
 
-if (CMAKE_C_COMPILER_ID MATCHES "Clang")
+if (CMAKE_Fortran_COMPILER_ID MATCHES "Clang")
     # See Transpose() subroutine in external/io_netcdf/wrf_io.F90 for details.
     message(FATAL_ERROR "Clang is not supported, use gcc/gfortran from Homebrew instead")
 endif()
