--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,6 +29,7 @@ install:
   - ps: .ci\appveyor\dump-vm-specs.ps1
   - ps: .ci\appveyor\increase-pagefile-size.ps1
   - call .ci\appveyor\setup-dependencies.bat
+  - ps: .ci\appveyor\dump-vm-specs.ps1
 
 build_script:
   - call .ci\appveyor\install-wrf.bat
