--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -15,7 +15,7 @@ jobs:
   - pwsh: .ci\appveyor\dump-vm-specs.ps1
     displayName: Dump VM specs
 
-  - pwsh: .ci\azure\scripts\increase-pagefile-size.ps1
+  - pwsh: .ci\appveyor\increase-pagefile-size.ps1
     displayName: Increase page file size
 
   - script: set
